Renamed files, added header and og image

--- a/exam2.html
+++ b/exam2.html
@@ -7,6 +7,27 @@
     <title>Exam 2 - Electrical Aptitude Test Practice</title>
     <meta name="description"
         content="Complete practice exam for the Electrical apprenticeship aptitude test covering both math and reading sections.">
+    <meta name="keywords" content="electrical aptitude test, exam 2, practice test, IBEW test, apprenticeship exam">
+    <meta name="author" content="Electrical Aptitude Test Prep">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://electricalaptitudetestprep.com/exam2.html">
+    <meta property="og:title" content="Exam 2 - Electrical Aptitude Test Practice">
+    <meta property="og:description"
+        content="Complete practice exam for the Electrical apprenticeship aptitude test covering both math and reading sections.">
+    <meta property="og:image" content="https://electricalaptitudetestprep.com/assets/images/aptitude_og_1.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:site_name" content="Electrical Aptitude Test Prep">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://electricalaptitudetestprep.com/exam2.html">
+    <meta name="twitter:title" content="Exam 2 - Electrical Aptitude Test Practice">
+    <meta name="twitter:description"
+        content="Complete practice exam for the Electrical apprenticeship aptitude test covering both math and reading sections.">
+    <meta name="twitter:image" content="https://electricalaptitudetestprep.com/assets/images/aptitude_og_1.png">
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/icon_32.png">
@@ -33,10 +54,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="full-practice_1.html">Exam 1</a>
+                        <a class="nav-link" href="exam1.html">Exam 1</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="full-practice_2.html">Exam 2</a>
+                        <a class="nav-link active" href="exam2.html">Exam 2</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="practice-math.html">Math Practice</a>
@@ -45,10 +66,10 @@
                         <a class="nav-link" href="practice-reading.html">Reading Practice</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="explanations-math.html"> Math Help</a>
+                        <a class="nav-link" href="math-help.html"> Math Help</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="explanations-reading.html">Reading Help</a>
+                        <a class="nav-link" href="reading-help.html">Reading Help</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">About</a>
