--- a/index.html
+++ b/index.html
@@ -4,13 +4,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Electrical Aptitude Test Practice - Free Practice Exams</title>
+    <title>Electrical Aptitude Test Practice - Free Practice Exams </title>
     <meta name="description"
+        content="Free practice exams and study resources for an electrical apprenticeship aptitude test. Practice math and reading comprehension questions.">
+    <meta name="keywords"
+        content="electrical aptitude test, apprenticeship test, practice exam, electrical trade, IBEW test prep, free electric aptitude test">
+    <meta name="author" content="Electrical Aptitude Test Prep">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://electricalaptitudetestprep.com/">
+    <meta property="og:title" content="Electrical Aptitude Test Practice - Free Practice Exams">
+    <meta property="og:description"
+        content="Free practice exams and study resources for an electrical apprenticeship aptitude test. Practice math and reading comprehension questions.">
+    <meta property="og:image" content="https://electricalaptitudetestprep.com/assets/images/aptitude_og_1.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:site_name" content="Electrical Aptitude Test Prep">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://electricalaptitudetestprep.com/">
+    <meta name="twitter:title" content="Electrical Aptitude Test Practice - Free Practice Exams">
+    <meta name="twitter:description"
         content="Free practice exams and study resources for the Electrical apprenticeship aptitude test. Practice math and reading comprehension questions.">
+    <meta name="twitter:image" content="https://electricalaptitudetestprep.com/assets/images/aptitude_og_1.png">
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/icon_32.png">
-
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://electricalaptitudetestprep.com/">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
@@ -33,10 +56,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="full-practice_1.html">Exam 1</a>
+                        <a class="nav-link" href="exam1.html">Exam 1</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="full-practice_2.html">Exam 2</a>
+                        <a class="nav-link" href="exam2.html">Exam 2</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="practice-math.html">Math Practice</a>
@@ -45,10 +68,10 @@
                         <a class="nav-link" href="practice-reading.html">Reading Practice</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="explanations-math.html"> Math Help</a>
+                        <a class="nav-link" href="math-help.html"> Math Help</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="explanations-reading.html">Reading Help</a>
+                        <a class="nav-link" href="reading-help.html">Reading Help</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">About</a>
@@ -69,17 +92,18 @@
         <div class="container">
             <!-- Hero Section -->
             <div class="hero-section">
-                <h1>Prepare for Your Electrical Aptitude Test</h1>
-                <p>Free practice exams and study resources to help you succeed on an electrical apprenticeship aptitude
+                <h1>Prepare for Your Electrical Aptitude Test For Free!</h1>
+                <p>Free practice exams and study resources to help you succeed on an
+                    electrical apprenticeship aptitude
                     test.
                 </p>
 
                 <div class="d-flex gap-3 justify-content-center flex-wrap">
-                    <a href="full-practice_1.html" class="btn btn-primary btn-lg">Exam 1</a>
+                    <a href="exam1.html" class="btn btn-primary btn-lg">Exam 1</a>
 
                     <a href="practice-math.html" class="btn btn-success btn-lg">Math Practice</a>
                     <a href="practice-reading.html" class="btn btn-success btn-lg">Reading Practice</a>
-                    <a href="full-practice_2.html" class="btn btn-primary btn-lg">Exam 2</a>
+                    <a href="exam2.html" class="btn btn-primary btn-lg">Exam 2</a>
                 </div>
             </div>
 
@@ -94,8 +118,8 @@
                                 experience. Test your knowledge across both math and reading sections.</p>
                             <p> <strong>It is recommended to save Exam 2 for 1-2 days before your test.</strong> </p>
                             <div class="d-flex gap-2">
-                                <a href="full-practice_1.html" class="btn btn-primary">Exam 1</a>
-                                <a href="full-practice_2.html" class="btn btn-primary">Exam 2</a>
+                                <a href="exam1.html" class="btn btn-primary">Exam 1</a>
+                                <a href="exam2.html" class="btn btn-primary">Exam 2</a>
                             </div>
                         </div>
                     </div>
@@ -123,8 +147,8 @@
                                 Get tips for reading comprehension questions.
                                 Understand the test format and improve your approach.</p>
                             <div class="d-flex gap-2">
-                                <a href="explanations-math.html" class="btn btn-outline-primary">Math Help</a>
-                                <a href="explanations-reading.html" class="btn btn-outline-primary">Reading Help</a>
+                                <a href="math-help.html" class="btn btn-outline-primary">Math Help</a>
+                                <a href="reading-help.html" class="btn btn-outline-primary">Reading Help</a>
                             </div>
                         </div>
                     </div>
@@ -175,8 +199,8 @@
                         <div class="card-body">
                             <h3 class="card-title">How to Use This Site</h3>
                             <ol>
-                                <li><strong>Start with a full practice exam:</strong> Take <a
-                                        href="full-practice_1.html">Exam 1</a> and
+                                <li><strong>Start with a full practice exam:</strong> Take <a href="exam1.html">Exam
+                                        1</a> and
                                     mimic the test environment. You will only be allowed to have scratch paper and a
                                     pencil. Get those then set a timer for 50
                                     minutes for the math portion. Note that there are no calculators allowed. Take a
@@ -184,10 +208,10 @@
                                 <li><strong>Review:</strong> After completing the exam, grade your answers and review
                                     the
                                     explanations for each problem.</li>
-                                <li><strong>Study:</strong> Go check out the <a href="explanations-math.html">Math Help
+                                <li><strong>Study:</strong> Go check out the <a href="math-help.html">Math Help
                                         page</a> and make sure you understand
                                     the strategies for solving each type of question. Look over the <a
-                                        href="explanations-reading.html">Reading Help page</a> as
+                                        href="reading-help.html">Reading Help page</a> as
                                     well.
                                 <li><strong>Practice sections separately:</strong> Use the <a
                                         href="practice-math.html">Math Practice</a> and <a
@@ -198,7 +222,7 @@
                                     more, I recommend that you use an LLM like Chat GPT or
                                     Claude to generate extra practice questions and explanations.</li>
                                 <li><strong>Take the second exam:</strong> 1-2 days before your test, complete <a
-                                        href="full-practice_2.html">Exam 2</a> to measure your
+                                        href="exam2.html">Exam 2</a> to measure your
                                     progress and further prepare for test day.</li>
 
                             </ol>
