--- a/about.html
+++ b/about.html
@@ -7,10 +7,32 @@
     <title>About - Electrical Aptitude Test Practice</title>
     <meta name="description"
         content="About the Electrical Aptitude Test Practice site, FAQ, and how to support this free educational resource.">
+    <meta name="keywords" content="electrical aptitude test, about, FAQ, free educational resource, IBEW test prep">
+    <meta name="author" content="Electrical Aptitude Test Prep">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://electricalaptitudetestprep.com/about.html">
+    <meta property="og:title" content="About - Electrical Aptitude Test Practice">
+    <meta property="og:description"
+        content="About the Electrical Aptitude Test Practice site, FAQ, and how to support this free educational resource.">
+    <meta property="og:image" content="https://electricalaptitudetestprep.com/assets/images/aptitude_og_1.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:site_name" content="Electrical Aptitude Test Prep">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://electricalaptitudetestprep.com/about.html">
+    <meta name="twitter:title" content="About - Electrical Aptitude Test Practice">
+    <meta name="twitter:description"
+        content="About the Electrical Aptitude Test Practice site, FAQ, and how to support this free educational resource.">
+    <meta name="twitter:image" content="https://electricalaptitudetestprep.com/assets/images/aptitude_og_1.png">
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/icon_32.png">
-
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://electricalaptitudetestprep.com/about.html">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
@@ -33,10 +55,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="full-practice_1.html">Exam 1</a>
+                        <a class="nav-link" href="exam1.html">Exam 1</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="full-practice_2.html">Exam 2</a>
+                        <a class="nav-link" href="exam2.html">Exam 2</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="practice-math.html">Math Practice</a>
@@ -45,10 +67,10 @@
                         <a class="nav-link" href="practice-reading.html">Reading Practice</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="explanations-math.html"> Math Help</a>
+                        <a class="nav-link" href="math-help.html"> Math Help</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="explanations-reading.html">Reading Help</a>
+                        <a class="nav-link" href="reading-help.html">Reading Help</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="about.html">About</a>
@@ -166,8 +188,8 @@
                                 portion.
                                 Take a 10 minute break between the two sections.
                                 After completing the full practice exam, review the explanations and study the
-                                strategies on the <a href="explanations-math.html">Math Help</a> and <a
-                                    href="explanations-reading.html">Reading Help</a> pages.
+                                strategies on the <a href="math-help.html">Math Help</a> and <a
+                                    href="reading-help.html">Reading Help</a> pages.
                                 Then, practice the math and reading sections separately.
                                 Finally, take the additional full practice exam to see your progress.
 
