--- a/math-help.html
+++ b/math-help.html
@@ -4,9 +4,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Math Help - Electrical Aptitude Test Practice</title>
+    <title>Math Help - Electrical Aptitude Test Practice</title>
     <meta name="description"
         content="Study strategies and tips for the math section of the Electrical apprenticeship aptitude test.">
+    <meta name="keywords"
+        content="electrical aptitude test, math help, study tips, IBEW math strategies, apprenticeship math guide">
+    <meta name="author" content="Electrical Aptitude Test Prep">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://electricalaptitudetestprep.com/math-help.html">
+    <meta property="og:title" content="Math Help - Electrical Aptitude Test Practice">
+    <meta property="og:description"
+        content="Study strategies and tips for the math section of the Electrical apprenticeship aptitude test.">
+    <meta property="og:image" content="https://electricalaptitudetestprep.com/assets/images/aptitude_og_1.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:site_name" content="Electrical Aptitude Test Prep">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://electricalaptitudetestprep.com/math-help.html">
+    <meta name="twitter:title" content="Math Help - Electrical Aptitude Test Practice">
+    <meta name="twitter:description"
+        content="Study strategies and tips for the math section of the Electrical apprenticeship aptitude test.">
+    <meta name="twitter:image" content="https://electricalaptitudetestprep.com/assets/images/aptitude_og_1.png">
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/icon_32.png">
@@ -35,10 +57,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="full-practice_1.html">Exam 1</a>
+                        <a class="nav-link" href="exam1.html">Exam 1</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="full-practice_2.html">Exam 2</a>
+                        <a class="nav-link" href="exam2.html">Exam 2</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="practice-math.html">Math Practice</a>
@@ -47,10 +69,10 @@
                         <a class="nav-link" href="practice-reading.html">Reading Practice</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="explanations-math.html"> Math Help</a>
+                        <a class="nav-link active" href="math-help.html"> Math Help</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="explanations-reading.html">Reading Help</a>
+                        <a class="nav-link" href="reading-help.html">Reading Help</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">About</a>
@@ -691,15 +713,15 @@
                             <h5 class="card-title">Ready to Practice?</h5>
                             <p class="card-text">Apply these strategies with our practice questions.</p>
                             <a href="practice-math.html" class="btn btn-success me-2">Math Practice</a>
-                            <a href="full-practice_1.html" class="btn btn-primary me-2">Exam 1</a>
-                            <a href="full-practice_2.html" class="btn btn-primary">Exam 2</a>
+                            <a href="exam1.html" class="btn btn-primary me-2">Exam 1</a>
+                            <a href="exam2.html" class="btn btn-primary">Exam 2</a>
                         </div>
                     </div>
 
                     <!-- Navigation -->
                     <div class="d-flex justify-content-between mb-4">
                         <a href="index.html" class="btn btn-outline-secondary">Back to Home</a>
-                        <a href="explanations-reading.html" class="btn btn-outline-primary">Reading Help</a>
+                        <a href="reading-help.html" class="btn btn-outline-primary">Reading Help</a>
                     </div>
                 </div>
             </div>
