--- a/practice-math.html
+++ b/practice-math.html
@@ -7,6 +7,25 @@
     <title>Math Practice - Electrical Aptitude Test Practice</title>
     <meta name="description"
         content="Practice math questions for the Electrical apprenticeship aptitude test. Algebra, functions, and number series practice.">
+    <meta name="keywords" content="electrical aptitude test, math practice, algebra practice, IBEW math, apprenticeship math">
+    <meta name="author" content="Electrical Aptitude Test Prep">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://electricalaptitudetestprep.com/practice-math.html">
+    <meta property="og:title" content="Math Practice - Electrical Aptitude Test Practice">
+    <meta property="og:description" content="Practice math questions for the Electrical apprenticeship aptitude test. Algebra, functions, and number series practice.">
+    <meta property="og:image" content="https://electricalaptitudetestprep.com/assets/images/aptitude_og_1.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:site_name" content="Electrical Aptitude Test Prep">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://electricalaptitudetestprep.com/practice-math.html">
+    <meta name="twitter:title" content="Math Practice - Electrical Aptitude Test Practice">
+    <meta name="twitter:description" content="Practice math questions for the Electrical apprenticeship aptitude test. Algebra, functions, and number series practice.">
+    <meta name="twitter:image" content="https://electricalaptitudetestprep.com/assets/images/aptitude_og_1.png">
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/icon_32.png">
@@ -44,10 +63,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="full-practice_1.html">Exam 1</a>
+                        <a class="nav-link" href="exam1.html">Exam 1</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="full-practice_2.html">Exam 2</a>
+                        <a class="nav-link" href="exam2.html">Exam 2</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="practice-math.html">Math Practice</a>
@@ -56,10 +75,10 @@
                         <a class="nav-link" href="practice-reading.html">Reading Practice</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="explanations-math.html"> Math Help</a>
+                        <a class="nav-link" href="math-help.html"> Math Help</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="explanations-reading.html">Reading Help</a>
+                        <a class="nav-link" href="reading-help.html">Reading Help</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">About</a>
@@ -91,7 +110,7 @@
                                 <li>Work through each question at your own pace</li>
                                 <li>Focus on understanding the problem-solving approach</li>
                                 <li>Review explanations after answering (when available)</li>
-                                <li>Visit the <a href="explanations-math.html"> Math Help</a> page for tips and
+                                <li>Visit the <a href="math-help.html"> Math Help</a> page for tips and
                                     techniques</li>
                             </ul>
                         </div>
@@ -1933,7 +1952,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Study Resources</h5>
                             <p class="card-text">Looking for strategies and tips? Check out our math study guide.</p>
-                            <a href="explanations-math.html" class="btn btn-primary">View Math Help</a>
+                            <a href="math-help.html" class="btn btn-primary">View Math Help</a>
                         </div>
                     </div>
 
@@ -1941,8 +1960,8 @@
                     <div class="d-flex justify-content-between mb-4">
                         <a href="index.html" class="btn btn-outline-secondary">Back to Home</a>
                         <div>
-                            <a href="full-practice_1.html" class="btn btn-primary me-2">Exam 1</a>
-                            <a href="full-practice_2.html" class="btn btn-primary me-2">Exam 2</a>
+                            <a href="exam1.html" class="btn btn-primary me-2">Exam 1</a>
+                            <a href="exam2.html" class="btn btn-primary me-2">Exam 2</a>
                             <a href="practice-reading.html" class="btn btn-success">Practice Reading</a>
                         </div>
                     </div>
