--- a/practice-reading.html
+++ b/practice-reading.html
@@ -7,6 +7,28 @@
     <title>Reading Practice - Electrical Aptitude Test Practice</title>
     <meta name="description"
         content="Practice reading comprehension questions for the Electrical apprenticeship aptitude test.">
+    <meta name="keywords"
+        content="electrical aptitude test, reading practice, comprehension practice, IBEW reading, apprenticeship reading">
+    <meta name="author" content="Electrical Aptitude Test Prep">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://electricalaptitudetestprep.com/practice-reading.html">
+    <meta property="og:title" content="Reading Practice - Electrical Aptitude Test Practice">
+    <meta property="og:description"
+        content="Practice reading comprehension questions for the Electrical apprenticeship aptitude test.">
+    <meta property="og:image" content="https://electricalaptitudetestprep.com/assets/images/aptitude_og_1.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:site_name" content="Electrical Aptitude Test Prep">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://electricalaptitudetestprep.com/practice-reading.html">
+    <meta name="twitter:title" content="Reading Practice - Electrical Aptitude Test Practice">
+    <meta name="twitter:description"
+        content="Practice reading comprehension questions for the Electrical apprenticeship aptitude test.">
+    <meta name="twitter:image" content="https://electricalaptitudetestprep.com/assets/images/aptitude_og_1.png">
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/icon_32.png">
@@ -33,10 +55,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="full-practice_1.html">Exam 1</a>
+                        <a class="nav-link" href="exam1.html">Exam 1</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="full-practice_2.html">Exam 2</a>
+                        <a class="nav-link" href="exam2.html">Exam 2</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="practice-math.html">Math Practice</a>
@@ -45,10 +67,10 @@
                         <a class="nav-link active" href="practice-reading.html">Reading Practice</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="explanations-math.html"> Math Help</a>
+                        <a class="nav-link" href="math-help.html"> Math Help</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="explanations-reading.html">Reading Help</a>
+                        <a class="nav-link" href="reading-help.html">Reading Help</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">About</a>
@@ -89,7 +111,7 @@
                                 <li>Use process of elimination to rule out answers that don't make sense.</li>
                                 <li>If I'm forced to guess, I'll pick the longest answer. I think that's the best way to
                                     go.</li>
-                                <li>Visit the <a href="explanations-reading.html">Reading
+                                <li>Visit the <a href="reading-help.html">Reading
                                         Strategies</a> page for some tips and techniques I put together for these types
                                     of questions.</li>
                             </ul>
@@ -1650,7 +1672,7 @@
                             <p class="card-text">Looking for strategies and tips? Check out the reading
                                 comprehension
                                 study guide.</p>
-                            <a href="explanations-reading.html" class="btn btn-primary">View Reading Help</a>
+                            <a href="reading-help.html" class="btn btn-primary">View Reading Help</a>
                         </div>
                     </div>
 
@@ -1658,8 +1680,8 @@
                     <div class="d-flex justify-content-between mb-4">
                         <a href="index.html" class="btn btn-outline-secondary">Back to Home</a>
                         <div>
-                            <a href="full-practice_1.html" class="btn btn-primary me-2">Exam 1</a>
-                            <a href="full-practice_2.html" class="btn btn-primary me-2">Exam 2</a>
+                            <a href="exam1.html" class="btn btn-primary me-2">Exam 1</a>
+                            <a href="exam2.html" class="btn btn-primary me-2">Exam 2</a>
                             <a href="practice-math.html" class="btn btn-success">Practice Math</a>
                         </div>
                     </div>
