Head edits, added canonical URL

--- a/donate.html
+++ b/donate.html
@@ -7,14 +7,16 @@
     <title>Donate - Electrical Aptitude Test Practice</title>
     <meta name="description"
         content="Support the Electrical Aptitude Test Practice site. Your donations help keep this free educational resource available for everyone.">
-    <meta name="keywords" content="electrical aptitude test, donate, support, free educational resource, IBEW test prep donation">
+    <meta name="keywords"
+        content="electrical aptitude test, donate, support, free educational resource, IBEW test prep donation">
     <meta name="author" content="Electrical Aptitude Test Prep">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://electricalaptitudetestprep.com/donate.html">
     <meta property="og:title" content="Donate - Electrical Aptitude Test Practice">
-    <meta property="og:description" content="Support the Electrical Aptitude Test Practice site. Your donations help keep this free educational resource available for everyone.">
+    <meta property="og:description"
+        content="Support the Electrical Aptitude Test Practice site. Your donations help keep this free educational resource available for everyone.">
     <meta property="og:image" content="https://electricalaptitudetestprep.com/assets/images/aptitude_og_1.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
@@ -24,12 +26,14 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://electricalaptitudetestprep.com/donate.html">
     <meta name="twitter:title" content="Donate - Electrical Aptitude Test Practice">
-    <meta name="twitter:description" content="Support the Electrical Aptitude Test Practice site. Your donations help keep this free educational resource available for everyone.">
+    <meta name="twitter:description"
+        content="Support the Electrical Aptitude Test Practice site. Your donations help keep this free educational resource available for everyone.">
     <meta name="twitter:image" content="https://electricalaptitudetestprep.com/assets/images/aptitude_og_1.png">
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/icon_32.png">
-
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://electricalaptitudetestprep.com/donate.html">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
