--- a/exam1.html
+++ b/exam1.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exam 1 - Electrical Aptitude Test Practice</title>
     <meta name="description"
-        content="Complete practice exam for the Electrical apprenticeship aptitude test covering both math and reading sections.">
+        content="Complete practice exam for an electrical apprenticeship aptitude test covering both math and reading sections.">
     <meta name="keywords" content="electrical aptitude test, exam 1, practice test, IBEW test, apprenticeship exam">
     <meta name="author" content="Electrical Aptitude Test Prep">
 
@@ -15,7 +15,7 @@
     <meta property="og:url" content="https://electricalaptitudetestprep.com/exam1.html">
     <meta property="og:title" content="Exam 1 - Electrical Aptitude Test Practice">
     <meta property="og:description"
-        content="Complete practice exam for the Electrical apprenticeship aptitude test covering both math and reading sections.">
+        content="Complete practice exam for an electrical apprenticeship aptitude test covering both math and reading sections.">
     <meta property="og:image" content="https://electricalaptitudetestprep.com/assets/images/aptitude_og_1.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
@@ -26,12 +26,13 @@
     <meta name="twitter:url" content="https://electricalaptitudetestprep.com/exam1.html">
     <meta name="twitter:title" content="Exam 1 - Electrical Aptitude Test Practice">
     <meta name="twitter:description"
-        content="Complete practice exam for the Electrical apprenticeship aptitude test covering both math and reading sections.">
+        content="Complete practice exam for an electrical apprenticeship aptitude test covering both math and reading sections.">
     <meta name="twitter:image" content="https://electricalaptitudetestprep.com/assets/images/aptitude_og_1.png">
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/icon_32.png">
-
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://electricalaptitudetestprep.com/exam1.html">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
