--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <meta name="twitter:url" content="https://electricalaptitudetestprep.com/">
     <meta name="twitter:title" content="Electrical Aptitude Test Practice - Free Practice Exams">
     <meta name="twitter:description"
-        content="Free practice exams and study resources for the Electrical apprenticeship aptitude test. Practice math and reading comprehension questions.">
+        content="Free practice exams and study resources for an electrical apprenticeship aptitude test. Practice math and reading comprehension questions.">
     <meta name="twitter:image" content="https://electricalaptitudetestprep.com/assets/images/aptitude_og_1.png">
 
     <!-- Favicon -->
