--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,8 @@
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/icon_32.png">
-
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://electricalaptitudetestprep.com/contact.html">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
