--- a/practice-math.html
+++ b/practice-math.html
@@ -6,15 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Math Practice - Electrical Aptitude Test Practice</title>
     <meta name="description"
-        content="Practice math questions for the Electrical apprenticeship aptitude test. Algebra, functions, and number series practice.">
-    <meta name="keywords" content="electrical aptitude test, math practice, algebra practice, IBEW math, apprenticeship math">
+        content="Practice math questions for an electrical apprenticeship aptitude test. Algebra, functions, and number series practice.">
+    <meta name="keywords"
+        content="electrical aptitude test, math practice, algebra practice, IBEW math, apprenticeship math">
     <meta name="author" content="Electrical Aptitude Test Prep">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://electricalaptitudetestprep.com/practice-math.html">
     <meta property="og:title" content="Math Practice - Electrical Aptitude Test Practice">
-    <meta property="og:description" content="Practice math questions for the Electrical apprenticeship aptitude test. Algebra, functions, and number series practice.">
+    <meta property="og:description"
+        content="Practice math questions for an electrical apprenticeship aptitude test. Algebra, functions, and number series practice.">
     <meta property="og:image" content="https://electricalaptitudetestprep.com/assets/images/aptitude_og_1.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
@@ -24,12 +26,14 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://electricalaptitudetestprep.com/practice-math.html">
     <meta name="twitter:title" content="Math Practice - Electrical Aptitude Test Practice">
-    <meta name="twitter:description" content="Practice math questions for the Electrical apprenticeship aptitude test. Algebra, functions, and number series practice.">
+    <meta name="twitter:description"
+        content="Practice math questions for an electrical apprenticeship aptitude test. Algebra, functions, and number series practice.">
     <meta name="twitter:image" content="https://electricalaptitudetestprep.com/assets/images/aptitude_og_1.png">
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/icon_32.png">
-
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://electricalaptitudetestprep.com/practice-math.html">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
