--- a/reading-help.html
+++ b/reading-help.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reading Help - Electrical Aptitude Test Practice</title>
     <meta name="description"
-        content="Study strategies and tips for the reading comprehension section of the Electrical apprenticeship aptitude test.">
+        content="Study strategies and tips for the reading comprehension section of an electrical apprenticeship aptitude test.">
     <meta name="keywords"
         content="electrical aptitude test, reading help, comprehension tips, IBEW reading strategies, apprenticeship reading guide">
     <meta name="author" content="Electrical Aptitude Test Prep">
@@ -16,7 +16,7 @@
     <meta property="og:url" content="https://electricalaptitudetestprep.com/reading-help.html">
     <meta property="og:title" content="Reading Help - Electrical Aptitude Test Practice">
     <meta property="og:description"
-        content="Study strategies and tips for the reading comprehension section of the Electrical apprenticeship aptitude test.">
+        content="Study strategies and tips for the reading comprehension section of an electrical apprenticeship aptitude test.">
     <meta property="og:image" content="https://electricalaptitudetestprep.com/assets/images/aptitude_og_1.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
@@ -27,12 +27,13 @@
     <meta name="twitter:url" content="https://electricalaptitudetestprep.com/reading-help.html">
     <meta name="twitter:title" content="Reading Help - Electrical Aptitude Test Practice">
     <meta name="twitter:description"
-        content="Study strategies and tips for the reading comprehension section of the Electrical apprenticeship aptitude test.">
+        content="Study strategies and tips for the reading comprehension section of an electrical apprenticeship aptitude test.">
     <meta name="twitter:image" content="https://electricalaptitudetestprep.com/assets/images/aptitude_og_1.png">
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/icon_32.png">
-
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://electricalaptitudetestprep.com/reading-help.html">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
