Updated hero section- testing github deploy

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div class="container">
             <!-- Hero Section -->
             <div class="hero-section">
-                <h1>Prepare for Your Electrical Aptitude Test For Free!</h1>
+                <h1>Prepare for Your Electrical Aptitude Test</h1>
                 <p>Free practice exams and study resources to help you succeed on an
                     electrical apprenticeship aptitude
                     test.
