Changes to about page

--- a/about.html
+++ b/about.html
@@ -118,8 +118,12 @@
                                 college for math. Well, the white collar job market in 2025 ain't what it used to be, so
                                 I ended
                                 up looking for work in the trades again.</p>
-                            <p>I took an aptitude test for an electrical apprenticeship and didn't study because all of
-                                the materials I could find were paywalled. I managed to pass mine, but I don't want
+                            <p>I applied for an electrical apprenticeship, and I was surprised to see that there was an
+                                aptitude test with math on it. I was even more
+                                surprised to see that the test preparation resources online were all behind a
+                                paywall. I didn't know exactly what to expect on the test, but I studied math in college
+                                so I
+                                decided to wing it. I did well, but I don't want
                                 anyone to have a financial barrier to passing their test, so I made this site with my
                                 free time.
                             </p>
