Modified index, removed bottom page nav

--- a/about.html
+++ b/about.html
@@ -93,7 +93,7 @@
 
                     <!-- About Section -->
                     <div class="card mb-4">
-                        <div class="card-header">
+                        <div class="card-header bg-primary text-white">
                             <h5 class="mb-0">The Mission</h5>
                         </div>
                         <div class="card-body">
@@ -109,7 +109,7 @@
 
                     <!-- Why I Created This Site Section -->
                     <div class="card mb-4">
-                        <div class="card-header">
+                        <div class="card-header bg-primary text-white">
                             <h5 class="mb-0">Why I created this site</h5>
                         </div>
                         <div class="card-body">
@@ -127,8 +127,8 @@
                                 anyone to have a financial barrier to passing their test, so I made this site with my
                                 free time.
                             </p>
-                            <p>If you find this site helpful, please consider supporting it by buying me a coffee or
-                                donating to the site, it only takes a minute and helps keep the site free for everyone.
+                            <p>If you find this site helpful, please consider supporting it by buying me a coffee, it
+                                only takes a minute and helps keep the site free for everyone.
                             </p>
                         </div>
                     </div>
@@ -199,7 +199,7 @@
 
                             </p>
 
-                            <h6 class="mt-4">I saw a question on the test that wasn't on this site!</h6>
+                            <h6 class="mt-4">I saw a type of question on the test that wasn't on this site!</h6>
                             <p>Let me know, and I'll add it to the site.</p>
                             <h6 class="mt-4">Is this good preparation for the GAN aptitude test?</h6>
                             <p>I'm not familiar with that test, so I would caution against using this site as a resource
