--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <!-- Hero Section -->
             <div class="hero-section">
                 <h1>Prepare for Your Electrical Aptitude Test</h1>
-                <p>Free practice exams and study resources to help you succeed on an
+                <p>Free practice exams and study resources to help you succeed on a typical math / reading
                     electrical apprenticeship aptitude
                     test.
                 </p>
@@ -113,9 +113,9 @@
                     <div class="card h-100">
                         <div class="card-body">
                             <h5 class="card-title">Exams</h5>
-                            <p class="card-text">Take complete practice exams that simulate an electrical apprenticeship
+                            <p class="card-text">Take practice exams that simulate an electrical apprenticeship
                                 aptitude test
-                                experience. Test your knowledge across both math and reading sections.</p>
+                                that focuses on math and reading.</p>
                             <p> <strong>It is recommended to save Exam 2 for 1-2 days before your test.</strong> </p>
                             <div class="d-flex gap-2">
                                 <a href="exam1.html" class="btn btn-primary">Exam 1</a>
@@ -143,9 +143,9 @@
                     <div class="card h-100">
                         <div class="card-body">
                             <h5 class="card-title">Study Strategies</h5>
-                            <p class="card-text">See a walkthrough and solving strategies for each type of math problem.
-                                Get tips for reading comprehension questions.
-                                Understand the test format and improve your approach.</p>
+                            <p class="card-text">See a walkthrough and solving strategies for different types of math
+                                problems. Get tips for reading comprehension questions with a detailed breakdown of how
+                                to think through the different types of questions you might encounter.</p>
                             <div class="d-flex gap-2">
                                 <a href="math-help.html" class="btn btn-outline-primary">Math Help</a>
                                 <a href="reading-help.html" class="btn btn-outline-primary">Reading Help</a>
@@ -162,32 +162,36 @@
                     <div class="card">
                         <div class="card-body">
                             <h3 class="card-title">What to Expect</h3>
-                            <p>An typical electrical apprenticeship aptitude test consists of two main sections:</p>
+                            <p>A typical electrical apprenticeship aptitude test consists of two main sections:</p>
                             <ul>
                                 <li><strong>Math Section:</strong> 45 minutes of algebra, functions, number series, and
                                     mathematical
-                                    reasoning. The math sections on this site are a few problems longer than the actual
+                                    reasoning. The math sections on this site are a few problems longer than a typical
                                     test, so they
                                     use a 50
                                     minute time limit.</li>
                                 <li><strong>Reading Comprehension:</strong> 50 minutes of understanding written passages
                                     and answering
                                     questions</li>
-                                <li><strong>Additional Topics:</strong> Depending on the test, you may also be tested on
-                                    other topics such as:</li>
-                                <ul>
-                                    <li>Mechanical Aptitude</li>
-                                    <li>Spatial Reasoning (paper folding)</li>
-                                    <li>Other topics may vary by test</li>
-
-                                </ul>
                             </ul>
-                            <p>These practice exams are designed to help you familiarize yourself with the math and
-                                reading question
-                                types and format you'll encounter on test day. <strong>Additional topics may be tested
-                                    on the
-                                    test day, so be sure to find out what is on your particular test and practice those
-                                    types of questions as well.</strong> </p>
+                            <div class="alert alert-warning" role="alert">
+                                <strong>Additional topics and questions types may be tested, so be sure to find out what
+                                    is on your particular test and practice those types of questions as
+                                    well.</strong>
+                            </div>
+                            <p>Additional topics may include:</p>
+                            <ul>
+                                <li>Mechanical Aptitude</li>
+                                <li>Spatial Reasoning</li>
+                                <li>Math questions that are not covered on this site</li>
+                                <li>Other topics may vary by test</li>
+
+                            </ul>
+                            </ul>
+                            <p> <strong>These practice exams are designed to help you familiarize yourself with the math
+                                    and
+                                    reading question
+                                    types ONLY.</strong> </p>
                         </div>
                     </div>
                 </div>
@@ -199,11 +203,18 @@
                         <div class="card-body">
                             <h3 class="card-title">How to Use This Site</h3>
                             <ol>
+                                <li><strong>Find out what is on your particular test:</strong> This site is designed to
+                                    help you prepare for a typical math and reading aptitude test, but additional topics
+                                    may be tested which are not covered here. This site is unlikely to be adequate
+                                    preparation
+                                    for a GAN aptitude test.</li>
                                 <li><strong>Start with a full practice exam:</strong> Take <a href="exam1.html">Exam
                                         1</a> and
-                                    mimic the test environment. You will only be allowed to have scratch paper and a
+                                    mimic the test environment. You will <strong>only</strong> be allowed to have
+                                    scratch paper and a
                                     pencil. Get those then set a timer for 50
-                                    minutes for the math portion. Note that there are no calculators allowed. Take a
+                                    minutes for the math portion.<strong> Note that there are no calculators
+                                        allowed.</strong> Take a
                                     10-minute break, then spend 50 minutes on the reading portion.</li>
                                 <li><strong>Review:</strong> After completing the exam, grade your answers and review
                                     the
@@ -219,11 +230,16 @@
                                     pages to focus on specific areas where you need improvement in math, and get
                                     additional practice in reading.</li>
                                 <li><strong>Get extra practice and explanations:</strong> If you still need to practice
-                                    more, I recommend that you use an LLM like Chat GPT or
+                                    more or you are struggling with a particular type of question, I recommend that you
+                                    use a free onlince resource like Khan Academy.
+                                    Alternatively, you can use an LLM like Chat GPT or
                                     Claude to generate extra practice questions and explanations.</li>
                                 <li><strong>Take the second exam:</strong> 1-2 days before your test, complete <a
                                         href="exam2.html">Exam 2</a> to measure your
                                     progress and further prepare for test day.</li>
+                                <li><strong>Consider donating:</strong> Every little bit helps keep this website running
+                                    and free for everyone. Donate whatever you think is fair. <a
+                                        href="donate.html">Donate here</a>.</li>
 
                             </ol>
                         </div>
