--- a/math-help.html
+++ b/math-help.html
@@ -691,8 +691,10 @@
                                     multiply decimals," or "how to do long division" will return plenty of helpful
                                     articles, videos, and tutorials.</li>
                             </ul>
-                            <p class="mb-3">Once you understand the methods, practice is key. Use the practice problems
-                                on this site to test your skills, but don't hesitate to review the fundamentals using
+                            <p class="mb-3">Once you understand the methods, practice is key. Use the <a
+                                    href="practice-math.html">practice problems</a>
+                                on this site to test your skills (arithmetic problems are at the bottom), but don't
+                                hesitate to review the fundamentals using
                                 the resources above if needed.</p>
                             <h5>Key concepts to master</h5>
                             <ul>
@@ -712,18 +714,14 @@
                     <div class="card mb-4">
                         <div class="card-body text-center">
                             <h5 class="card-title">Ready to Practice?</h5>
-                            <p class="card-text">Apply these strategies with our practice questions.</p>
+                            <p class="card-text">Apply these strategies with some practice questions.</p>
                             <a href="practice-math.html" class="btn btn-success me-2">Math Practice</a>
                             <a href="exam1.html" class="btn btn-primary me-2">Exam 1</a>
                             <a href="exam2.html" class="btn btn-primary">Exam 2</a>
                         </div>
                     </div>
 
-                    <!-- Navigation -->
-                    <div class="d-flex justify-content-between mb-4">
-                        <a href="index.html" class="btn btn-outline-secondary">Back to Home</a>
-                        <a href="reading-help.html" class="btn btn-outline-primary">Reading Help</a>
-                    </div>
+
                 </div>
             </div>
         </div>
