--- a/practice-math.html
+++ b/practice-math.html
@@ -1955,20 +1955,12 @@
                     <div class="card mb-4">
                         <div class="card-body">
                             <h5 class="card-title">Study Resources</h5>
-                            <p class="card-text">Looking for strategies and tips? Check out our math study guide.</p>
+                            <p class="card-text">Looking for strategies and tips? Check out the math study guide.</p>
                             <a href="math-help.html" class="btn btn-primary">View Math Help</a>
                         </div>
                     </div>
 
-                    <!-- Navigation -->
-                    <div class="d-flex justify-content-between mb-4">
-                        <a href="index.html" class="btn btn-outline-secondary">Back to Home</a>
-                        <div>
-                            <a href="exam1.html" class="btn btn-primary me-2">Exam 1</a>
-                            <a href="exam2.html" class="btn btn-primary me-2">Exam 2</a>
-                            <a href="practice-reading.html" class="btn btn-success">Practice Reading</a>
-                        </div>
-                    </div>
+
                 </div>
             </div>
         </div>
