--- a/reading-help.html
+++ b/reading-help.html
@@ -707,18 +707,13 @@
                     <div class="card mb-4">
                         <div class="card-body text-center">
                             <h5 class="card-title">Ready to Practice?</h5>
-                            <p class="card-text">Apply these strategies with our practice questions.</p>
+                            <p class="card-text">Apply these strategies to some practice questions.</p>
                             <a href="practice-reading.html" class="btn btn-success me-2">Reading Practice</a>
                             <a href="exam1.html" class="btn btn-primary me-2">Exam 1</a>
                             <a href="exam2.html" class="btn btn-primary">Exam 2</a>
                         </div>
                     </div>
 
-                    <!-- Navigation -->
-                    <div class="d-flex justify-content-between mb-4">
-                        <a href="index.html" class="btn btn-outline-secondary">Back to Home</a>
-                        <a href="math-help.html" class="btn btn-outline-primary"> Math Help</a>
-                    </div>
                 </div>
             </div>
         </div>
